# sds-data-manager

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  app_template_dev.py  cdk.context.json  cdk.json  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-template.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: test.yml
docs/source/cdk/: cdk-deployment-personal-aws.rst  opensearch-setup
lambda_layer/python/: requirements.txt
scripts/: sds_api.py
sds_data_manager/: __init__.py  sds_cognito_stack.py  sds_data_manager_stack.py
sds_data_manager/constructs/: batch_compute_resources.py  batch_system.py  batch_system_lambdas.py  event_bridge.py  ialirt_ingest_lambda_construct.py  instrument_lambdas.py  processing_construct.py  sdc_step_function.py
sds_data_manager/lambda_code/: batch_starter.py  downstream_dependents.json  requirements.txt
sds_data_manager/lambda_code/IAlirtCode/: ialirt_algorithm.py  ialirt_ingest.py
sds_data_manager/lambda_code/SDSCode/: batch_starter.py  cognito_signup_message.py  cognito_utils.py  create_metadata_table.py  create_schema.py  data_archiver.py  dependency_config.csv  dependency_config.py  dependency_config_ultra.py  download_api.py  download_query_api.py  indexer.py  path_helper.py  pointing_frame_handler.py  queries.py  upload_api.py
sds_data_manager/lambda_code/efs_lambda/: lambda_function.py
sds_data_manager/lambda_code/instruments/: batch_starter.py
sds_data_manager/lambda_images/instruments/: Dockerfile  batch_starter.py
sds_data_manager/stacks/: api_gateway_stack.py  batch_compute_resources.py  create_schema_stack.py  data_storage_stack.py  database_stack.py  domain_stack.py  ecr_stack.py  efs_stack.py  ialirt_bucket_stack.py  ialirt_compute_resources.py  ialirt_processing_stack.py  indexer_lambda_stack.py  instrument_lambdas.py  lambda_stack.py  networking_stack.py  opensearch_stack.py  processing_stack.py  processing_step.py  sds_data_manager_stack.py
sds_data_manager/utils/: dependencies.json  get_dependency.py  get_downstream_dependencies.py  stackbuilder.py
sds_in_a_box/: sds_cognito_stack.py  sds_in_a_box_stack.py
sds_in_a_box/SDSCode/: cognito_utils.py  download_api.py  download_query_api.py  queries.py  upload_api.py
tests/: conftest.py
tests/docker_images/: Dockerfile  Dockerfile.testing  imap_api.py
tests/infrastructure/: conftest.py  test_apigateway.py  test_backup_bucket_stack.py  test_data_bucket.py  test_data_manager_stack.py  test_database_construct.py  test_ialirt_ingest_lambda_construct.py  test_ialirt_processing_stack.py  test_indexer_lambda_construct.py  test_monitoring.py  test_open_search_stack.py  test_sds_api_manager_construct.py
tests/lambda_endpoints/: conftest.py  test_batch_starter.py  test_codicehi.py  test_ialirt_algorithm.py  test_ialirt_ingest.py  test_pointing_frame_handler.py  test_queries.py  test_query_api.py  test_step_function_starter.py
tests/opensearch_utils/: test_snapshot.py
tests/rds_utils/: test_db_ingest_query.py
tests/test-data/: Dockerfile  codicehi_event.json  process_kickoff_test_data.csv  test_app.py
tests/test-data/ialirt_ec2/: Dockerfile  test_app.py
tests/test-data/ialirt_ec2_primary/: Dockerfile  test_app.py
tests/unit/: test_data_manager_stack.py  test_download_query_api.py  test_indexer.py  test_queries.py  test_sds_cognito_validity.py  test_sds_in_a_box_stack.py
(+21 files in other folders)
