[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sds-data-manager"
version = "0.1.0"
description = "IMAP Science Operations Center AWS data manager"
authors = ["IMAP SDS Developers <imap-sdc@lists.lasp.colorado.edu>"]
readme = "README.md"
license = "MIT"
keywords = ["IMAP", "SDC", "SOC", "SDS", "Science Operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
# 2.66+ required for aws-cdk.aws-lambda-python-alpha
aws-cdk-lib = ">=2.66.0,<3.0.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.66.0a0"
constructs = ">=10.0.0,<11.0.0"

# Optional dependencies
# dev
black = {version="^23.1.0", optional=true}
pre-commit = {version="^3.3.3", optional=true}
ruff = {version="^0.0.253", optional=true}
# doc
myst-parser = {version="^2.0.0", optional=true}
pydata-sphinx-theme = {version="^0.13.3", optional=true}
sphinx = {version="^7.1.0", optional=true}
# test
boto3 = {version="^1.26.78", optional=true}
moto = {version="^4.1.3", optional=true}
openmock = {version="^2.3.0", optional=true}
pytest = {version="==6.2.5", optional=true}
pytest-cov = {version="^4.0.0", optional=true}

# Development group, installed by default with poetry but not
# picked up by pip installs
[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.3.3"
ruff = "^0.0.253"

[tool.poetry.group.tests.dependencies]
# Installed by default, can be installed without these dependencies using `poetry install --without tests`
boto3 = "^1.26.78"
moto = "^4.1.3"
openmock = "^2.3.0"
pytest = "==6.2.5"
pytest-cov = "^4.0.0"

[tool.poetry.group.lambda-dev]
# Not installed by default, can be installed using `poetry install --with lambda-dev`. If you only want this group, you can use `poetry install --only lambda-dev
optional = true

[tool.poetry.group.lambda-dev.dependencies]
opensearch-py = "^2.1.1"
requests = "^2.28.2"

# Used for installing with pip
[tool.poetry.extras]
dev = ["black", "boto3", "moto", "openmock", "pre-commit", "pytest", "pytest-cov", "ruff"]
doc = ["myst-parser", "pydata-sphinx-theme", "sphinx"]

[project.urls]
homepage = "https://github.com/IMAP-Science-Operations-Center"
repository = "https://github.com/IMAP-Science-Operations-Center/sds-data-manager"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-ra"
markers = [
    "network: Test that requires network access",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib*",
    "ignore::DeprecationWarning:jsii*",
]

[tool.ruff]
target-version = "py39"
select = ["B", "E", "F", "I", "N", "W", "PL", "PT", "UP", "RUF"]
# Ignore import sorting for now until lines_after_imports is respected
# by ruff and we can replace isort
ignore = ["D203", "D212", "PLR0913", "PLR2004"]
